# module_2-HW7

hw_7/: alembic.ini  pyproject.toml
hw_7/alembic/: env.py
hw_7/alembic/versions/: 98bfcad9be4a_init.py
hw_7/hw_7/: main.py  my_select.py  seed.py
