[tool.poetry]
name = "hw-7"
version = "0.1.0"
description = ""
authors = ["Vitalii-Mykhalchenko <swimming580@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
